fix wrap columns

--- a/src/views/AddCategoryDialog/styles.scss
+++ b/src/views/AddCategoryDialog/styles.scss
@@ -60,8 +60,8 @@ div.wrapper {
   max-height: 364px;
   overflow-y: auto;
   @media (max-width: $breakpoint) {
+    max-height: none;
     overflow-y: visible;
-    max-height: 100%;
   }
 }
 
